test/bad/classes/print03.px

class Test def
    func toString(x: Int): String def
        return ""

print Test()
